.metadata/.plugins/org.eclipse.cdt.ui/Laboratorio-3.build.log
21:48:09 **** Rebuild of configuration Debug for project Laboratorio-3 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clases\\Categoria.o" "..\\src\\Clases\\Categoria.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clases\\CancelacionTemporalJugador.o" "..\\src\\Clases\\CancelacionTemporalJugador.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DataTypes\\DtPartida.o" "..\\src\\DataTypes\\DtPartida.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clases\\SuscribeVideojuego.o" "..\\src\\Clases\\SuscribeVideojuego.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Controladores\\ControladorPartida.o" "..\\src\\Controladores\\ControladorPartida.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DataTypes\\DtSuscripcionVideojuego.o" "..\\src\\DataTypes\\DtSuscripcionVideojuego.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clases\\Comentario.o" "..\\src\\Clases\\Comentario.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DataTypes\\DtJugador.o" "..\\src\\DataTypes\\DtJugador.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Clases\\Multijugador.o" "..\\src\\Clases\\Multijugador.cpp" 
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\DataTypes\\DtPartidaIndividual.o" "..\\src\\DataTypes\\DtPartidaIndividual.cpp" 
..\src\DataTypes\DtPartidaIndividual.cpp: In constructor 'DtPartidaIndividual::DtPartidaIndividual(bool)':
..\src\DataTypes\DtPartidaIndividual.cpp:10:67: error: no matching function for call to 'DtPartida::DtPartida()'
 DtPartidaIndividual::DtPartidaIndividual(bool continuacionAnterior) {
                                                                   ^
In file included from ..\src\DataTypes\DtPartidaIndividual.h:11:0,
                 from ..\src\DataTypes\DtPartidaIndividual.cpp:8:
..\src\DataTypes\DtPartida.h:18:2: note: candidate: DtPartida::DtPartida(int, DtFechaHora*, std::__cxx11::string)
  DtPartida(int, DtFechaHora*, string);
  ^~~~~~~~~
..\src\DataTypes\DtPartida.h:18:2: note:   candidate expects 3 arguments, 0 provided
..\src\DataTypes\DtPartida.h:16:7: note: candidate: DtPartida::DtPartida(const DtPartida&)
 class DtPartida {
       ^~~~~~~~~
..\src\DataTypes\DtPartida.h:16:7: note:   candidate expects 1 argument, 0 provided

21:48:15 Build Failed. 1 errors, 0 warnings. (took 6s.335ms)

